--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       </div>
 
       <div class="box">
-        <img class="active" src="img/1.jpg">
+        <img class="active first" src="img/1.jpg">
         <img src="img/2.jpg">
-        <img src="img/3.jpg">
+        <img class="last" src="img/3.jpg">
       </div>
 
 
