fix first and last

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <div class="box">
         <img class="active first" src="img/1.jpg">
         <img src="img/2.jpg">
-        <img class="last" src="img/3.jpg">
+        <img src="img/3.jpg">
+        <img src="img/4.jpeg">
+        <img src="img/5.jpeg">
+        <img src="img/6.jpeg">
+         <img class="last" src="img/7.jpeg">
       </div>
 
 
