add and fix bottom cursor

--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
         <img src="img/4.jpeg">
         <img src="img/5.jpeg">
         <img src="img/6.jpeg">
-         <img class="last" src="img/7.jpeg">
+        <img class="last" src="img/7.jpeg">
+
+        <div class="img-footer">
+          <ul>
+            <li class = "first-p select"><a href="#"><i class="fas fa-bomb"></i></a></li>
+            <li><a href="#"><i class="fas fa-bomb"></i></a></li>
+            <li><a href="#"><i class="fas fa-bomb"></i></a></li>
+            <li><a href="#"><i class="fas fa-bomb"></i></a></li>
+            <li><a href="#"><i class="fas fa-bomb"></i></a></li>
+            <li><a href="#"><i class="fas fa-bomb"></i></a></li>
+            <li class="last-p"><a href="#"><i class="fas fa-bomb"></i></a></li>
+          </ul>
+
+        </div>
       </div>
 
 
